[gd_scene load_steps=4 format=3 uid="uid://di126gmu27tbr"]

[ext_resource type="Script" path="res://menu.gd" id="1_bmqbk"]
[ext_resource type="Texture2D" uid="uid://cuam7p48nd6ht" path="res://Screenshot 2024-10-27 at 11.11.51 AM.png" id="2_f6ybd"]
[ext_resource type="Script" path="res://start_game.gd" id="2_ixg6k"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmqbk")

[node name="Screenshot2024-10-27At11_11_51 am" type="Sprite2D" parent="."]
position = Vector2(566, 339)
texture = ExtResource("2_f6ybd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 176.0
offset_right = 618.0
offset_bottom = 426.0
scale = Vector2(1.28127, 9.91687)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
flat = true
script = ExtResource("2_ixg6k")

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
flat = true

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
flat = true

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
